// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple blocking store render 1`] = `
<div>
  <span
    class="dev"
  >
    1
  </span>
  <button>
    increase
  </button>
  <button>
    decrease
  </button>
</div>
`;

exports[`multiple blocking store render with chunks 1`] = `
<div>
  <span
    class="dev"
  >
    1
  </span>
  <button>
    increase
  </button>
  <button>
    decrease
  </button>
  <div>
    Hello
  </div>
  <div>
    Hello
  </div>
  <div>
    Hello
  </div>
  <div>
    Hello
  </div>
  <div>
    Hello
  </div>
  <div>
    Hello
  </div>
  <div>
    Hello
  </div>
  <div>
    Hello
  </div>
  <div>
    Hello
  </div>
  <div>
    Hello
  </div>
  <div>
    Hello
  </div>
  <div>
    Hello
  </div>
  <div>
    Hello
  </div>
  <div>
    Hello
  </div>
  <div>
    Hello
  </div>
  <div>
    Hello
  </div>
  <div>
    Hello
  </div>
  <div>
    Hello
  </div>
  <div>
    Hello
  </div>
  <div>
    Hello
  </div>
</div>
`;
